@@ -68,6 +68,7 @@ class DaemonLifecycleSpec extends DaemonIntegrationSpec {
 
     def buildDirWithScript(buildNum, buildScript) {
         def dir = buildDir(buildNum)
+        dir.file("settings.gradle").touch()
         dir.file("build.gradle") << buildScript
         dir
     }
@@ -78,8 +79,8 @@ class DaemonLifecycleSpec extends DaemonIntegrationSpec {
             executer.withDaemonIdleTimeoutSecs(daemonIdleTimeout)
             executer.withArguments(
                     "-Dorg.gradle.daemon.healthcheckinterval=${periodicCheckInterval * 1000}",
-                    "--debug", // Need debug logging so we can extract the `DefaultDaemonContext`
-                    "-Dorg.gradle.jvmargs=-ea")
+                    "--debug" // Need debug logging so we can extract the `DefaultDaemonContext`
+            )
             if (javaHome) {
                 executer.withJavaHome(javaHome)
             }
@@ -252,6 +253,9 @@ class DaemonLifecycleSpec extends DaemonIntegrationSpec {
         stopped()
     }
 
+    //IBM JDK adds a bunch of environment variables that make the foreground daemon not match
+    //Java 9 and above needs --add-opens to make environment variable mutation work
+    @Requires([TestPrecondition.NOT_JDK_IBM, TestPrecondition.JDK8_OR_EARLIER])
     def "existing foreground idle daemons are used"() {
         when:
         startForegroundDaemon()
